--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>thimssen</title>
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-black text-white/90">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script rel="stylesheet" href="/src/style.css"></script>
