--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thimssen</title>
+    <title>Thimssen</title>
   </head>
-  <body class="bg-black text-white/90">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script rel="stylesheet" href="/src/style.css"></script>
